[Update] update all

--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -11,23 +11,26 @@
         android:id="@+id/title_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="130dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Title"
+        android:maxLength="12"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/subtitle_editText"
+        android:id="@+id/contents_editText"
         android:layout_width="340dp"
         android:layout_height="500dp"
         android:layout_marginTop="25dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textMultiLine"
         android:hint="Content"
+        android:singleLine="false"
+        android:scrollHorizontally="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_editText" />
@@ -42,5 +45,5 @@
         android:text="Save"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/subtitle_editText" />
+        app:layout_constraintTop_toBottomOf="@+id/contents_editText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
